changed to dashboard style

--- a/apps/daybook/index.html
+++ b/apps/daybook/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://robinthomasonline.github.io/apps/daybook/">
     <meta property="og:title" content="Daybook | Income & Expense Tracker for Small Shops">
     <meta property="og:description" content="Track income and expenses with multiple items per entry. Generate invoices and export data. Perfect for small business bookkeeping.">
-    <meta property="og:site_name" content="Robin Thomas - Projects">
+    <meta property="og:site_name" content="Robin Thomas - Apps">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
