--- a/apps/ip/index.html
+++ b/apps/ip/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://robinthomasonline.github.io/apps/ip/">
     <meta property="og:title" content="IP Address Locator | Free Geolocation Tool">
     <meta property="og:description" content="Get comprehensive geographical and network information for any IP address. Displays location, network, country, timezone, ISP details, and interactive map.">
-    <meta property="og:site_name" content="Robin Thomas - Projects">
+    <meta property="og:site_name" content="Robin Thomas - Apps">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
