--- a/apps/kanban/index.html
+++ b/apps/kanban/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://robinthomasonline.github.io/apps/kanban/">
     <meta property="og:title" content="Kanban Board | Free Task Management Tool">
     <meta property="og:description" content="A minimalist drag-and-drop task management board with CSV export/import, priority levels, and user assignment. Organize your workflow efficiently.">
-    <meta property="og:site_name" content="Robin Thomas - Projects">
+    <meta property="og:site_name" content="Robin Thomas - Apps">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
