--- a/apps/keralalottery/index.html
+++ b/apps/keralalottery/index.html
@@ -14,7 +14,7 @@
   <meta property="og:url" content="https://robinthomasonline.github.io/apps/keralalottery/">
   <meta property="og:title" content="Kerala Lottery Draw Machine | Free Lottery Simulator">
   <meta property="og:description" content="Experience the authentic Kerala State Lotteries Department draw machine. Generate random lottery numbers with realistic rolling animation and digital clock display.">
-  <meta property="og:site_name" content="Robin Thomas - Projects">
+  <meta property="og:site_name" content="Robin Thomas - Apps">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
