--- a/apps/mood/index.html
+++ b/apps/mood/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://robinthomasonline.github.io/apps/mood/">
     <meta property="og:title" content="Mood Logger | Track Your Emotional Wellbeing">
     <meta property="og:description" content="Track your emotional wellbeing and mood patterns over time. Log daily emotions with notes, visualize trends with interactive charts, and gain insights into your emotional health.">
-    <meta property="og:site_name" content="Robin Thomas - Projects">
+    <meta property="og:site_name" content="Robin Thomas - Apps">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
