--- a/apps/password/index.html
+++ b/apps/password/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://robinthomasonline.github.io/apps/password/">
     <meta property="og:title" content="Password Generator | Secure Password Creator">
     <meta property="og:description" content="Generate secure, compliant passwords with customizable complexity settings. Features compliance presets for ISO, PCI, CSA, HIPAA, NIST, and GDPR standards.">
-    <meta property="og:site_name" content="Robin Thomas - Projects">
+    <meta property="og:site_name" content="Robin Thomas - Apps">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
