--- a/apps/resume-cover/index.html
+++ b/apps/resume-cover/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://robinthomasonline.github.io/apps/resume-cover/">
     <meta property="og:title" content="ATS-Friendly Resume & Cover Letter Generator | AI-Powered | International Standards">
     <meta property="og:description" content="Free AI-powered ATS-friendly resume and cover letter generator. Create keyword-rich, tailored documents optimized for international job markets with Gemini AI.">
-    <meta property="og:site_name" content="Robin Thomas - Projects">
+    <meta property="og:site_name" content="Robin Thomas - Apps">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
