--- a/apps/subnet/index.html
+++ b/apps/subnet/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://robinthomasonline.github.io/apps/subnet/">
     <meta property="og:title" content="Subnet Calculator | Free Network Engineering Tool">
     <meta property="og:description" content="Calculate subnet mask, network address, broadcast address, and host range from IP/CIDR notation. Demonstrates network engineering with binary representation visualization.">
-    <meta property="og:site_name" content="Robin Thomas - Projects">
+    <meta property="og:site_name" content="Robin Thomas - Apps">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
