--- a/apps/timer/index.html
+++ b/apps/timer/index.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://robinthomasonline.github.io/apps/timer/">
     <meta property="og:title" content="Work Timer | Productivity Timer & Task Tracker">
     <meta property="og:description" content="Productivity timer application for tracking work sessions, breaks, and time management. Helps improve focus and maintain work-life balance with customizable timer settings.">
-    <meta property="og:site_name" content="Robin Thomas - Projects">
+    <meta property="og:site_name" content="Robin Thomas - Apps">
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
