--- a/apps/index.html
+++ b/apps/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects Showcase | Robin Thomas</title>
+    <title>Apps Showcase | Robin Thomas</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -76,14 +76,14 @@
             transform: translateX(-5px);
         }
 
-        .projects-grid {
+        .apps-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
             gap: 2rem;
             margin-top: 3rem;
         }
 
-        .project-card {
+        .app-card {
             background: rgba(255, 255, 255, 0.07);
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
@@ -99,7 +99,7 @@
             overflow: hidden;
         }
 
-        .project-card::before {
+        .app-card::before {
             content: '';
             position: absolute;
             top: 0;
@@ -112,14 +112,14 @@
             transition: transform 0.3s ease;
         }
 
-        .project-card:hover {
+        .app-card:hover {
             transform: translateY(-8px);
             box-shadow: 0 12px 32px rgba(0, 0, 0, 0.3);
             background: rgba(255, 255, 255, 0.1);
             border-color: rgba(255, 255, 255, 0.2);
         }
 
-        .project-card:hover::before {
+        .app-card:hover::before {
             transform: scaleX(1);
         }
 
@@ -201,12 +201,12 @@
                 font-size: 1rem;
             }
 
-            .projects-grid {
+            .apps-grid {
                 grid-template-columns: 1fr;
                 gap: 1.5rem;
             }
 
-            .project-card {
+            .app-card {
                 padding: 1.5rem;
             }
 
@@ -233,7 +233,7 @@
                 font-size: 1.75rem;
             }
 
-            .project-card {
+            .app-card {
                 padding: 1.25rem;
             }
         }
@@ -250,39 +250,39 @@
             }
         }
 
-        .project-card {
+        .app-card {
             animation: fadeInUp 0.6s ease-out backwards;
         }
 
-        .project-card:nth-child(1) {
+        .app-card:nth-child(1) {
             animation-delay: 0.1s;
         }
 
-        .project-card:nth-child(2) {
+        .app-card:nth-child(2) {
             animation-delay: 0.2s;
         }
 
-        .project-card:nth-child(3) {
+        .app-card:nth-child(3) {
             animation-delay: 0.3s;
         }
 
-        .project-card:nth-child(4) {
+        .app-card:nth-child(4) {
             animation-delay: 0.4s;
         }
 
-        .project-card:nth-child(5) {
+        .app-card:nth-child(5) {
             animation-delay: 0.5s;
         }
 
-        .project-card:nth-child(6) {
+        .app-card:nth-child(6) {
             animation-delay: 0.6s;
         }
 
-        .project-card:nth-child(7) {
+        .app-card:nth-child(7) {
             animation-delay: 0.7s;
         }
 
-        .project-card:nth-child(8) {
+        .app-card:nth-child(8) {
             animation-delay: 0.8s;
         }
 
@@ -329,12 +329,12 @@
         </a>
 
         <div class="header">
-            <h1>Projects</h1>
+            <h1>Apps</h1>
             <p>Explore my collection of web applications and tools</p>
         </div>
 
-        <div class="projects-grid">
-            <a href="mood/" class="project-card">
+        <div class="apps-grid">
+            <a href="mood/" class="app-card">
                 <div class="project-icon">
                     <i class="fas fa-heart"></i>
                 </div>
@@ -356,7 +356,7 @@
                 </div>
             </a>
 
-            <a href="password/" class="project-card">
+            <a href="password/" class="app-card">
                 <div class="project-icon">
                     <i class="fas fa-key"></i>
                 </div>
@@ -378,7 +378,7 @@
                 </div>
             </a>
 
-            <a href="timer/" class="project-card">
+            <a href="timer/" class="app-card">
                 <div class="project-icon">
                     <i class="fas fa-stopwatch"></i>
                 </div>
@@ -400,7 +400,7 @@
                 </div>
             </a>
 
-            <a href="ip/" class="project-card">
+            <a href="ip/" class="app-card">
                 <div class="project-icon">
                     <i class="fas fa-map-marker-alt"></i>
                 </div>
@@ -422,7 +422,7 @@
                 </div>
             </a>
 
-            <a href="subnet/" class="project-card">
+            <a href="subnet/" class="app-card">
                 <div class="project-icon">
                     <i class="fas fa-network-wired"></i>
                 </div>
@@ -444,7 +444,7 @@
                 </div>
             </a>
 
-            <a href="kanban/" class="project-card">
+            <a href="kanban/" class="app-card">
                 <div class="project-icon">
                     <i class="fas fa-tasks"></i>
                 </div>
@@ -466,7 +466,7 @@
                 </div>
             </a>
 
-            <a href="resume-cover/" class="project-card">
+            <a href="resume-cover/" class="app-card">
                 <div class="project-icon">
                     <i class="fas fa-file-alt"></i>
                 </div>
@@ -489,7 +489,7 @@
                 </div>
             </a>
 
-            <a href="cofounder-pie/" class="project-card">
+            <a href="cofounder-pie/" class="app-card">
                 <div class="project-icon">
                     <i class="fas fa-chart-pie"></i>
                 </div>
@@ -513,7 +513,7 @@
                 </div>
             </a>
 
-            <a href="daybook/" class="project-card">
+            <a href="daybook/" class="app-card">
                 <div class="project-icon">
                     <i class="fas fa-book"></i>
                 </div>
